--- a/CCS_Workspace/IoAllNoRtosHalCoGen/.cproject
+++ b/CCS_Workspace/IoAllNoRtosHalCoGen/.cproject
@@ -71,6 +71,9 @@
 							<tool id="com.ti.ccstudio.buildDefinitions.TMS470_18.12.hex.932574639" name="ARM Hex Utility" superClass="com.ti.ccstudio.buildDefinitions.TMS470_18.12.hex"/>
 						</toolChain>
 					</folderInfo>
+					<sourceEntries>
+						<entry excluding="source/HL_sys_main.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
