--- a/TMS570/Experiment/_halCoGen/.cproject
+++ b/TMS570/Experiment/_halCoGen/.cproject
@@ -54,7 +54,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="source/HL_sys_link.cmd|source/HL_sys_main.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="source/HL_lin.c|source/HL_sys_link.cmd|source/HL_sys_main.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
